<resources>
    <string name="app_name" translatable="false">WizeCaller</string>

    <!-- Splash -->
    <string name="app_version_format" translatable="false">Version v %s (%d) </string>

    <!-- SMS Verification Strings -->
    <string name="title_activity_sms">SmsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started</string>
    <string name="lbl_country_code">Country Code</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_fullname">Full Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">NEXT</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_resend_message">Resend</string>
    <string name="invalid_phone_entered">Please enter a valid phone number</string>
    <string name="invalid_fullname_entered">Please enter your full name</string>

    <!-- GCM Strings -->
    <string name="gcm_api_key">AIzaSyBe5icePknb_wAlPNKVeFIvyXaAqiga6jo</string>

    <!-- Intro Activity -->
    <string name="skip">Skip</string>
    <string name="first_intro_title">First Intro Title</string>
    <string name="second_intro_title">Second Intro Title</string>
    <string name="third_intro_title">Third Intro Title</string>
    <string name="fourth_intro_title">Fourth Intro Title</string>
    <string name="first_intro_message">First Intro Message</string>
    <string name="second_intro_message">Second Intro Message</string>
    <string name="third_intro_message">Third Intro Message</string>
    <string name="fourth_intro_message">Fourth Intro Message</string>

    <!-- Main Activity Screen -->
    <string name="call_log">Call Log</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="app_intro">Intro</string>

    <!-- FaceBook -->
    <string name="facebook_app_id">1722543137778905</string>
    <string name="facebook_message">In order to get the most of WizeCaller you must login with Facebook.</string>

    <!-- Common Call Item -->
    <string name="calling_failed_message">In Order to call directly from the app, you must allow phone call permission.</string>

</resources>
