<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/captionTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:lines="2"
        android:text="@string/msg_sit_back"
        android:textColor="@color/app_text_color"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/captionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/msg_manual_otp"
        android:textColor="@color/app_text_color"
        android:textSize="17sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_otp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/inputOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/lbl_enter_otp"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="11dp"
            android:textColor="@color/app_text_color"
            android:textColorHint="@color/app_text_color"
            android:textSize="17dp">

            <requestFocus />
        </EditText>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/btn_verify_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/lbl_confirm"
        android:textColor="@color/app_text_color"
        android:textSize="21dp" />

    <TextView
        android:id="@+id/btn_resend_otp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_otp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/lbl_resend_message"
        android:textColor="@color/app_text_color"
        android:textSize="17sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop" />

</RelativeLayout>